cmake_minimum_required(VERSION 3.22)
project(baekjoon)

set(CMAKE_CXX_STANDARD 14)

add_executable(baekjoon
#        "C++ /#1037_C++.cpp"
#        "C++ /#1253_C++.cpp"
#        "C++ /#1934_C++.cpp"
#        "C++ /#2609_C++.cpp"
#        "C++ /#2609_C++_ver2.cpp"
#        "C++ /#2751_C++.cpp"
#        "C++ /#5086_C++.cpp"
#        "C++ /#1377_C++.cpp"
#        "C++ /#10989_C++.cpp"
#        "C++ /#11004_C++.cpp"
#        "C++ /#2023_C++.cpp"
        "C++ /#13023_C++.cpp"
        )
